# webauthn-tiny

./: .envrc  .gitignore  .proxyrc.json  Cargo.toml  README.md  TODO.md  default.nix  flake.nix  index.html  index.tsx  justfile  module.nix  package.json  package.nix  rollup.config.js  test.nix  test.py  tsconfig.json  ui.nix  webui-build.bash
.github/workflows/: build.yaml  ci.yml  update.yml
assets/: .envrc  default.nix  index.html  index.js  index.tsx  package.json  tsconfig.json  webpack.config.js
assets/src/: index.ts
dev/: default.nix  go.mod  go.sum  main.go
frontend/: build.sh  default.nix  deno.jsonc  domaincheck.ts  domains.json  domaintest.ts  index.html  index.html.tmpl  index.tsx  lock.json  main.tsx  package.json  tsconfig.json
frontend/packup/: default.nix  lock.json
script/: default.nix  deno.jsonc  main.ts  package.json  yarn.nix
src/: app.rs  handlers.rs  main.js  main.rs  session.rs
static/: style.css
templates/: authenticate.liquid  bottom.liquid  credentials.liquid  top.liquid
