[package]
name = "webauthn-tiny"
version = "0.2.3"
edition = "2021"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.95"
argon2 = "0.5"
async-trait = "0.1.84"
axum = "0.6.20"
axum-macros = "0.3.8"
axum-sessions = "0.4.1"
base64 = "0.22"
clap = { version = "4.5.23", features = ["std", "derive", "env"] }
libsqlite3-sys = "0.25.2"
liquid = "0.26.9"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
rusqlite = "0.28.0"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-rusqlite = "0.3.0"
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = "1.11.0"
webauthn-authenticator-rs = { version = "0.5", features = ["softtoken"] }
webauthn-rs = { version = "0.5", features = [
  "danger-allow-state-serialisation",
  "danger-credential-internals",
  "resident-key-support",
] }
webauthn-rs-core = "0.5"
webauthn-rs-proto = "0.5"
