[package]
name = "webauthn-tiny"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.6"
axum-macros = "0.3"
axum-sessions = "0.4"
base64 = "0.22"
clap = { version = "4", features = ["std", "derive", "env"] }
libsqlite3-sys = "0.25"
liquid = "0.26"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
rusqlite = "0.28"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-rusqlite = "0.3"
tower = { version = "0.5", features = ["tracing"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1"
webauthn-authenticator-rs = { version = "0.5", features = ["softtoken"] }
webauthn-rs = { version = "0.5", features = [
  "danger-allow-state-serialisation",
  "danger-credential-internals",
  "resident-key-support",
] }
webauthn-rs-core = "0.5"
webauthn-rs-proto = "0.5"
